# example_tools

./: .env.example  .gitignore  README.md  google_news.py  linkedin_tool.py  pyproject.toml  test.py  test_examples.py  test_tools.py
.github/workflows/: tool_tests.yml
examples/: __init__.py  google_news.py
examples/agents/: __init__.py
examples/swarm_agent/: example.py  news_reporter.py
examples/tools/: google_news.py  scaleserp_browser.py
src/agents/: __init__.py
src/agents/langchain_agent/: news_reporter.py  people_research_hil.py
src/agents/langgraph_agent/: people_research_hil.py
src/agents/pydanticai_agent/: basic.py  news_reporter.py  people_research.py  people_research_hil.py
src/agents/simplemind_tools/: basic.py
src/agents/smolagents_agent/: news_reporter.py  people_research_hil.py
src/agents/swarm_agent/: news_reporter.py  people_research_hil.py
src/app/: app.py
src/tools/: __init__.py  google_news.py  linkedin_tool.py
swarm_example/: news_reporter.py
