[tool.poetry]
name = "example-tools"
version = "0.1.0"
description = ""
authors = ["Scott Persinger <scottpersinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
googlenewsdecoder = "^0.1.7"
google-news-feed = "^1.1.0"
html2text = "^2024.2.26"
pandas = "^2.2.3"
swarm = {git = "https://github.com/openai/swarm.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
