[project]
name = "example-tools"
version = "0.1.0"
description = "Example implementations of agents, using various tools."
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "httpx >= 0.28.1",
    "googlenewsdecoder >= 0.1.7",
    "google-news-feed >= 1.1.0",
    "html2text >= 2024.2.26",
    "pandas >= 2.2.3",
    "swarm @ git+https://github.com/openai/swarm.git",
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
]
