[project]
name = "example-tools"
version = "0.1.0"
description = "Example implementations of agents, using various tools."
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "httpx >= 0.28.1",
    "googlenewsdecoder >= 0.1.7",
    "google-news-feed >= 1.1.0",
    "html2text >= 2024.2.26",
    "pandas >= 2.2.3",
    "swarm @ git+https://github.com/openai/swarm.git",
    "pydantic-ai>=0.0.21",
    "simplemind[openai]>=0.3.2",
    "langgraph>=0.2.69",
    "langchain-openai>=0.3.3",
    "ipython>=8.32.0",
    "streamlit>=1.41.1",
    "langchain>=0.3.17",
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
